[tool.poetry]
name = "cloudtictactoe-backend"
version = "0.1.0"
description = "Quart backend for the Tic Tac Toe game"
authors = ["Monczak <szymon.jedrzejczak.sj@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Quart = "^0.19.4"
Hypercorn = "^0.16.0"
redis = "^5.0.2"
boto3 = "^1.34.103"
python-dotenv = "^1.0.1"
aioboto3 = "^13.0.1"
requests = "^2.32.3"
quart-sqlalchemy = "^3.0.4"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
